--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,31 @@
 
 main {
   height: 100vh;
-  overflow: hidden;
+  overflow-y: auto;
   width: 100vw;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 270px auto;
 }
 
 .container-2fr {
   background-color: #ffffff;
+  padding: 0px 20px;
 }
 
 .contact-container {
   display: flex;
   margin: 15px 5px;
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    grid-template-columns: 1fr;
+    overflow-y: auto;
+  }
+  .container-2fr {
+    order: 1;
+  }
+  .container-1fr {
+    order: 2;
+  }
 }
