--- a/src/components/Highlights.css
+++ b/src/components/Highlights.css
@@ -25,5 +25,15 @@
 @media screen and (max-width: 600px) {
   .highlights-items {
     border: none;
+    padding: 2px 2px;
   }
+  /* .highlights-title {
+    height: 50px;
+    width: 100%;
+    margin: 10px 0px 0px 0px;
+    color: #335384;
+    font-size: 20px;
+    font-weight: bolder;
+    text-transform: uppercase;
+  } */
 }
